# libmat

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: err.rs  lib.rs  macros.rs  mat.rs
src/mat/: _mat.rs  dims.rs  mat_impl.rs  mat_ops.rs  smat.rs  smat_impl.rs  smat_ops.rs  vec.rs  vec_impl.rs  vec_ops.rs
src/mat/_mat/: mat_impl.rs  mat_ops.rs  mat_traits.rs
src/mat/smat/: smat_impl.rs  smat_ops.rs  smat_traits.rs
src/mat/vec/: vec_impl.rs  vec_ops.rs
tests/: compl_mat.rs  complex_tests.rs  determinant.rs  indexing.rs  macros.rs  simple_tests.rs
