[package]
name = "libmat"
description = "This is a simple library for doing calculations with matrices."
version = "0.0.1"
authors = ["Jonas Wiebe"]
edition = "2018"
repository = "https://github.com/wiebecommajonas/libmatrices"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libmat"
path = "src/lib.rs"
doc = true
test = true
edition = "2018"
crate_type = ["lib"]

[dependencies]
num = "0.4.0"
num-traits = "0.2.6"
