[package]
name = "libmat"
description = "This library provides tools for linear algebra."
version = "0.1.0"
authors = ["Jonas Wiebe"]
edition = "2018"
repository = "https://github.com/wiebecommajonas/libmat"
readme = "README.md"
keywords = ["matrix", "vector", "algebra", "maths"]
categories = ["mathematics", "science"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libmat"
path = "src/lib.rs"
doc = true
test = true
edition = "2018"
crate_type = ["lib"]

[dependencies]
num = "0.4.0"
num-traits = "0.2.14"
